--- a/Deep_Learning/Cat_Dogs/cnn.ipynb
+++ b/Deep_Learning/Cat_Dogs/cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,44 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cats-vs-dog-cnn-64x2-1635195332\n"
+      "Cats-vs-dog-cnn-64x2-1635281008\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-10-26 16:43:28.634587: I tensorflow/core/profiler/lib/profiler_session.cc:131] Profiler session initializing.\n",
+      "2021-10-26 16:43:28.634610: I tensorflow/core/profiler/lib/profiler_session.cc:146] Profiler session started.\n",
+      "2021-10-26 16:43:28.639863: I tensorflow/core/profiler/lib/profiler_session.cc:164] Profiler session tear down.\n"
      ]
     }
    ],
    "source": [
     "NAME = f\"Cats-vs-dog-cnn-64x2-{int(time.time())}\"\n",
-    "print(NAME)"
+    "print(NAME)\n",
+    "TensorBoard = TensorBoard(log_dir=f'logs/{NAME}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-10-25 16:55:32.199886: I tensorflow/core/profiler/lib/profiler_session.cc:131] Profiler session initializing.\n",
-      "2021-10-25 16:55:32.199899: I tensorflow/core/profiler/lib/profiler_session.cc:146] Profiler session started.\n",
-      "2021-10-25 16:55:32.200651: I tensorflow/core/profiler/lib/profiler_session.cc:164] Profiler session tear down.\n"
-     ]
-    }
-   ],
-   "source": [
-    "TensorBoard = TensorBoard(log_dir=f'logs/{NAME}/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,71 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-10-25 16:55:32.558257: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2021-10-25 16:55:33.156067: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "  4/702 [..............................] - ETA: 47s - loss: 0.7263 - accuracy: 0.4609"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-10-25 16:55:33.696786: I tensorflow/core/profiler/lib/profiler_session.cc:131] Profiler session initializing.\n",
-      "2021-10-25 16:55:33.696802: I tensorflow/core/profiler/lib/profiler_session.cc:146] Profiler session started.\n",
-      "2021-10-25 16:55:33.753367: I tensorflow/core/profiler/lib/profiler_session.cc:66] Profiler session collecting data.\n",
-      "2021-10-25 16:55:33.755004: I tensorflow/core/profiler/lib/profiler_session.cc:164] Profiler session tear down.\n",
-      "2021-10-25 16:55:33.759550: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33\n",
-      "\n",
-      "2021-10-25 16:55:33.761153: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for trace.json.gz to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.trace.json.gz\n",
-      "2021-10-25 16:55:33.764353: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33\n",
-      "\n",
-      "2021-10-25 16:55:33.764702: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for memory_profile.json.gz to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.memory_profile.json.gz\n",
-      "2021-10-25 16:55:33.766030: I tensorflow/core/profiler/rpc/client/capture_profile.cc:251] Creating directory: logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33\n",
-      "Dumped tool data for xplane.pb to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.xplane.pb\n",
-      "Dumped tool data for overview_page.pb to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.overview_page.pb\n",
-      "Dumped tool data for input_pipeline.pb to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.input_pipeline.pb\n",
-      "Dumped tool data for tensorflow_stats.pb to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.tensorflow_stats.pb\n",
-      "Dumped tool data for kernel_stats.pb to logs/Cats-vs-dog-cnn-64x2-1635195332/train/plugins/profile/2021_10_25_16_55_33/Benjamins-MBP.attlocal.net.kernel_stats.pb\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "702/702 [==============================] - 39s 55ms/step - loss: 0.6211 - accuracy: 0.6480 - val_loss: 0.5708 - val_accuracy: 0.7022\n",
-      "Epoch 2/3\n",
-      "702/702 [==============================] - 37s 52ms/step - loss: 0.5200 - accuracy: 0.7468 - val_loss: 0.5143 - val_accuracy: 0.7431\n",
-      "Epoch 3/3\n",
-      "702/702 [==============================] - 42s 59ms/step - loss: 0.4764 - accuracy: 0.7700 - val_loss: 0.5141 - val_accuracy: 0.7403\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f9e38a45400>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = X/255.0 # need to scale data. Since we know the min and max of the image data, we can do this\n",
     "#X = tf.keras.utils.normalize(X)\n",
@@ -155,7 +84,7 @@
     "model.add(MaxPool2D(pool_size=(2,2)))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(64, activation='relu'))\n",
+    "#model.add(Dense(64, activation='relu'))\n",
     "\n",
     "# output layer\n",
     "model.add(Dense(1))\n",
@@ -163,12 +92,56 @@
     "\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam',metrics=['accuracy']) # could also use categorical cross entropy\n",
     "\n",
-    "model.fit(X,y,batch_size=32, validation_split=0.1, epochs = 3, callbacks =[TensorBoard])\n",
+    "model.fit(X,y,batch_size=32, validation_split=0.1, epochs = 20, callbacks =[TensorBoard])\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- If interested in ways to optimize with tensorbaord visit: https://www.youtube.com/watch?v=lV09_8432VA&list=PLQVvvaa0QuDfhTox0AjmQ6tvTgMBZBEXN&index=5\n",
+    "  - Way too taxing on my cpu\n",
+    "- Read about eager execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ERROR: Failed to launch TensorBoard (exited with 255).\n",
+       "Contents of stderr:\n",
+       "NOTE: Using experimental fast data loading logic. To disable, pass\n",
+       "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
+       "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+       "\n",
+       "E1026 16:56:05.825925 4642303488 program.py:298] TensorBoard could not bind to port 8888, it was already in use\n",
+       "ERROR: TensorBoard could not bind to port 8888, it was already in use"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir logs/ --host localhost --port 8888\n"
    ]
   }
  ],
